src/test/resources/syntactic/tests/error/TC_ERROR_STRUCT_4.ru
/? ERROR: SINTACTICO 
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 5 | COLUMNA 5 | SE ESPERABA: } Y SE ENCONTRO: fn |
struct A{
    fn imprimo_sucesion(Int s) -> void{ /? un struct no contiene declaracion de metodos
        /?"el valor es: ";
        (IO.out_int(s));
        (IO.out_str("\n"));
    }
}